crates/tmark-writers/tests/snapshots/fixtures__inline-insert@latex.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
Now \uline{inserted} text.

---requires---
{
  "packages": [
    "ulem"
  ],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
