crates/tmark-writers/tests/snapshots/fixtures__inline-insert@typst.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
Now #underline[inserted] text.

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
