crates/tmark-writers/tests/snapshots/fixtures__inline-keys-prose@html.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
<p>Le code est écrit en C++03 alors que le C++ moderne utilise i++, jamais a ++ b, sauf pour <kbd>Ctrl</kbd>+<kbd>C</kbd> qui reste un raccourci.</p>

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
