crates/tmark-writers/tests/snapshots/fixtures__inline-keys-prose@typst.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
Le code est écrit en C++03 alors que le C++ moderne utilise i++, jamais a ++ b, sauf pour #ts-keys("Ctrl", "C") qui reste un raccourci.

---requires---
{
  "packages": [
    "tikz"
  ],
  "fragments": [
    "ts-keystrokes"
  ],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
