crates/tmark-writers/tests/snapshots/fixtures__inline-quotes-boundaries@html.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
<p>Quotes: &quot;one <em>two</em> three&quot; and “plain” and 'single' and &quot;unclosed here.</p>
<p>A 5&quot; screen, a (“bracketed”) one, and “last”.</p>

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
