crates/tmark-writers/tests/snapshots/fixtures__inline-quotes-boundaries@latex.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
Quotes: "one \emph{two} three" and \enquote{plain} and 'single' and "unclosed here.

A 5" screen, a (\enquote{bracketed}) one, and \enquote{last}.

---requires---
{
  "packages": [
    "csquotes"
  ],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
