crates/tmark-writers/tests/snapshots/fixtures__inline-quotes-boundaries@typst.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
Quotes: "one _two_ three" and "plain" and 'single' and "unclosed here.

A 5" screen, a ("bracketed") one, and "last".

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
