crates/tmark-writers/tests/snapshots/fixtures__inline-quotes-dashes@latex.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
Authors declare what a document element is---\enquote{this is a theorem,} \enquote{this is a section,} \enquote{this is a quotation}---and let the macros decide.

The root meant \enquote{art, craft, technique}---fitting for a craft-based reading. The \enquote{answer} is obvious.

---requires---
{
  "packages": [
    "csquotes"
  ],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
